@@ -124,4 +124,5 @@
 * v1.7 (, 2020)
   - New Checks:
     - overloaded signal
+    - invalid JNI signatures
   - qstring-arg warns when using QLatin1String::arg(int), as it casts to QChar
